--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,9 @@ p {
 a, a:hover, a:focus {
   color: #30a5ff; }
 
+h2.borda1{
+  padding-left: 30%;
+}
 h1, h2, h3, h4, h5, h6 {
   color: #444444; }
 
@@ -202,7 +205,11 @@ a.btn:active, button:active {
 
 .btn-primary, .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary, .btn-primary.disabled, .btn-primary[disabled], fieldset[disabled] .btn-primary, .btn-primary.disabled:hover, .btn-primary[disabled]:hover, fieldset[disabled] .btn-primary:hover, .btn-primary.disabled:focus, .btn-primary[disabled]:focus, fieldset[disabled] .btn-primary:focus, .btn-primary.disabled:active, .btn-primary[disabled]:active, fieldset[disabled] .btn-primary:active, .btn-primary.disabled.active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary.active {
   background-color: #30a5ff;
-  border-color: #30a5ff; }
+  border-color: #30a5ff;
+  margin-left: 40%;
+  padding-left: 10%;
+  padding-right: 10%;
+}
 
 .btn-success, .btn-success:hover, .btn-success:focus, .btn-success:active, .btn-success.active, .open > .dropdown-toggle.btn-success, .btn-success.disabled, .btn-success[disabled], fieldset[disabled] .btn-success, .btn-success.disabled:hover, .btn-success[disabled]:hover, fieldset[disabled] .btn-success:hover, .btn-success.disabled:focus, .btn-success[disabled]:focus, fieldset[disabled] .btn-success:focus, .btn-success.disabled:active, .btn-success[disabled]:active, fieldset[disabled] .btn-success:active, .btn-success.disabled.active, .btn-success[disabled].active, fieldset[disabled] .btn-success.active {
   background-color: #8ad919;
@@ -398,7 +405,8 @@ a.label:hover, a.label:focus {
   font-size: 20px;
   font-weight: 300;
   letter-spacing: 0.025em;
-  height: 60px;
+  height: 120
+  px;
   line-height: 38px; }
 
 .panel-default .panel-heading {
@@ -1025,7 +1033,7 @@ h1.page-header {
 
 .fixed-table-pagination .pagination-detail {
   margin-top: 20px; }
-  
+
 p.back-link {
   text-align: center;
   margin-bottom: 20px;
